# Template

./: .gitignore  CMakeLists.txt  README.md
Conan/: conanPackages.py  conanbuildinfo.cmake  conanfile.py  graph_info.json
PackageTemplate/: CMakeLists.txt  conanbuildinfo.cmake  conanfile.py
PackageTemplate/conan/: conanfile.py
PackageTemplate/package/: conaninfo.txt  conanmanifest.txt
PackageTemplate/trunk/: .gitignore  CMakeLists.txt
PackageTemplate/trunk/conan/: conanfile.py
Project/: Display.cpp  Display.h  main.cpp  main.cxx
Project/Template/: Template.cxx  Template.hxx
Template/: main.cxx
Template/Project/source/: main.cxx
Template/conan/: conanfile.py
Tests/: main.cxx
conan/: conanfile.py
